fix overflow

--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -33,7 +33,7 @@
       padding: 40% 10%;
 
       @media screen and (min-width: $medium) {
-        width: 27%;
+        width: 30%;
         border-radius: 10px;
         margin: 8rem auto;
         padding: 5%;
